--- a/gallery/src/main/res/layout/media_chooser_main_activity.xml
+++ b/gallery/src/main/res/layout/media_chooser_main_activity.xml
@@ -6,14 +6,8 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-    <GridView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/directories_grid"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:choiceMode="multipleChoiceModal"
-        android:columnWidth="@dimen/dir_tmb_size"
-        android:horizontalSpacing="1dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="1dp"/>
+        android:layout_height="wrap_content" />
 </android.support.design.widget.CoordinatorLayout>
